// Original file: protos/source/tasks.proto


export interface CreateTaskResponse {
  'id'?: (string);
  'name'?: (string);
  'description'?: (string);
  'listId'?: (string);
  'completed'?: (boolean);
  'unixTime'?: (string);
}

export interface CreateTaskResponse__Output {
  'id': (string);
  'name': (string);
  'description': (string);
  'listId': (string);
  'completed': (boolean);
  'unixTime': (string);
}
