// Original file: protos/tasks.proto


export interface UpdateTaskResponse {
  'id'?: (string);
  'name'?: (string);
  'description'?: (string);
  'listId'?: (string);
  'completed'?: (boolean);
  'unixTime'?: (string);
}

export interface UpdateTaskResponse__Output {
  'id': (string);
  'name': (string);
  'description': (string);
  'listId': (string);
  'completed': (boolean);
  'unixTime': (string);
}
